--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -249,7 +249,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="subtitle s2 wow fadeInUp mb-3">Explore Cultures</div>
-                        <h2 class="wow fadeInUp" style="word-spacing: 0.25em;" data-wow-delay=".2s">Dive into Cultural Diversity</h2>
+                        <h2 class="wow fadeInUp" style="word-spacing: 0.25em;" data-wow-delay=".2s">Select Culture to Explore</h2>
                     </div>
                 </div>
 
