--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                                     <!-- logo begin -->
                                     <div id="logo" class="" >
                                         <a href="@Url.Action("Index", "Home")">
-                                            <img class="logo-main  p-auto pt-1" src="@Url.Content("~/Content/Customer/images/logo.png")" alt="">
+                                            <img class="logo-main p-auto pt-1" src="@Url.Content("~/Content/Customer/images/logo.png")" alt="" style="width: 140px; height: auto;">
                                             <img class="logo-mobile" src="@Url.Content("~/Content/Customer/images/logo-mobile.png")" alt="">
                                         </a>
                                     </div>
@@ -69,9 +69,9 @@
                 <div class="row text-center align-content-center justify-content-center" style="background-color: white; color: yellow;">
                     <div class="col-12">
                         <div class="mainmenu">
-                            <h5 class="tagline text-warning menu-item" style="font-style: italic; text-decoration: underline;">
+                            <h6 class="tagline text-warning menu-item" style="font-style: italic;">
                                 Melbourne's Gateway to East Asian Wonders
-                            </h5>
+                            </h6>
                         </div>
                     </div>
                 </div>
