--- a/TP03MainProj/Views/Shared/WebGateLayout.cshtml
+++ b/TP03MainProj/Views/Shared/WebGateLayout.cshtml
@@ -5,6 +5,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="icon" href="@Url.Content("~/Content/Customer/images/logo-mobile.png")" type="image/gif" sizes="16x16">
+
 </head>
 <body>
     @RenderBody()
