--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -6,8 +6,7 @@
 }
 
 
-
-
+@*
 <section>
     <div class="container">
         <!--calendar-->
@@ -52,8 +51,71 @@
         </div>
     </div>
 </section>
+*@
+
+<section>
+    <div class="container-fluid">
+        <div class="row m-1 p-1 mb-3 mt-3 justify-content-center text-center" style="">
+            <div class="col">
+                @{
+                    var cultureColour = "";
+                    switch (ViewBag.Culture as string)
+                    {
+                        case "Japanese":
+                            cultureColour = "text-warning";
+                            break;
+                        case "Chinese":
+                            cultureColour = "text-danger";
+                            break;
+                        case "Korean":
+                            cultureColour = "text-primary";
+                            break;
+                        case "Filipino":
+                            cultureColour = "text-info";
+                            break;
+                        case "Vietnamese":
+                            cultureColour = "text-success";
+                            break;
+                        default:
+                            cultureColour = "black"; // Default colour
+                            break;
+                    }
+                }
+
+                <h2>Explore <span class="@cultureColour">@ViewBag.Culture</span> Events!</h2>
+                <div id="culture" data-culture="@ViewBag.Culture" style="display: none;"></div>
+            </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-4">
+
+                <div id="calendar" class="mx-auto"></div>
+
+            </div>
+            <div class="col-4">
+                <div class="row text-center">
+                    <h6 style="background-color:powderblue;"><i>Click around the Calender to find Events for the Festivals above...</i></h6>
+                </div>        
+                <div class="row">
+                    <div id="events-list"></div>
+
+                </div>
+
+            </div>
 
 
+        </div>
+        <div class="row">
+
+        </div>
+        <div class="row">
+
+        </div>
+    </div>
+
+</section>
 
 
 
@@ -65,17 +127,16 @@
     </script>
     @Scripts.Render("~/bundles/fullcalendar")
 
-
+    <!-- Modified the width of the calender to see if it fits -->
 
     <style>
 
-
-        #calendar {
-            width: 150%;
+        /* #calendar {
+            width: 50%;
             max-width: 900px;
             margin: 0 auto;
             margin-top: 5%;
-        }
+        } */
 
         .event-detail {
             margin-bottom: 20px;
