--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -5,14 +5,10 @@
 
 }
 
-
-
-
 <section>
-    <div class="container">
-        <!--calendar-->
-        <div class="row justify-content-center align-items-center">
-            <div class="col-lg-8 col-md-10 text-center">
+    <div class="container-fluid">
+        <div class="row justify-content-center text-center section-row" >
+            <div class="col">
                 @{
                     var cultureColour = "";
                     switch (ViewBag.Culture as string)
@@ -40,18 +36,53 @@
 
                 <h2>Explore <span class="@cultureColour">@ViewBag.Culture</span> Events!</h2>
                 <div id="culture" data-culture="@ViewBag.Culture" style="display: none;"></div>
-                <div id="calendar" class="mx-auto"></div>
-                <h6 style="background-color:powderblue;"><i>Click around the Calender to find Events for the Festivals above...</i></h6>
+            </div>
+
+        </div>
+        <div class="row row-cols-3 justify-content-start m-auto section-row bg-grey border-2  border-bottom" id="button-section">
+            <div class="col justify-content-center  align-content-center">
+                <a class="btn btn-primary w-25" href="">Events</a>
+                <a class="btn btn-primary w-25" href="">Quiz</a>
+                <a class="btn btn-primary w-25" href="">Attraction</a>
+
+
+            </div>
+            <div class="col">
+            </div>
+            <div class="col">
             </div>
         </div>
-        <!--events list-->
-        <div class="row justify-content-center align-items-center mt-3">
-            <div class="col-lg-8 col-md-10 text-center">
-                <div id="events-list"></div>
+
+
+        <div class="row justify-content-center section-row">
+            <div class="col-4">
+
+                <div id="calendar" class="mx-auto"></div>
+
             </div>
+            <div class="col-4">
+                <div class="row text-center">
+                    <h6 style="background-color:powderblue;"><i>Click around the Calender to find Events for the Festivals above...</i></h6>
+                </div>
+                <div class="row">
+                    <div id="events-list"></div>
+
+                </div>
+
+            </div>
+
+
+        </div>
+        <div class="row section-row">
+
+        </div>
+        <div class="row section-row">
+
         </div>
     </div>
+
 </section>
+
 
 
 
@@ -68,13 +99,12 @@
 
 
     <style>
-
-
-        #calendar {
-            width: 150%;
-            max-width: 900px;
-            margin: 0 auto;
-            margin-top: 5%;
+        #button-section {
+        }
+        .section-row {
+            margin: 2%;
+            padding: 1%;
+            margin-bottom: 20px;
         }
 
         .event-detail {
@@ -97,5 +127,6 @@
             background-color: #ff0;
             border: 2px solid #f00;
         }
+
     </style>
 }
