--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -55,7 +55,7 @@
 
 <section>
     <div class="container-fluid">
-        <div class="row m-1 p-1 mb-3 mt-3 justify-content-center text-center" style="">
+        <div class="row justify-content-center text-center section-row" >
             <div class="col">
                 @{
                     var cultureColour = "";
@@ -87,8 +87,18 @@
             </div>
 
         </div>
+        <div class="row row-cols-3 justify-content-center m-auto section-row bg-grey border-2  border-bottom" id="button-section">
+            <div class="col "></div>
+            <div class="col text-center">
+                <a class="btn culture-btn btn-primary  w-25" href="">Events</a>
+                <a class="btn culture-btn btn-primary w-25" href="">Quiz</a>
+                <a class="btn culture-btn btn-primary w-25" href="">Attraction</a>
+            </div>
+            <div class="col"></div>
+        </div>
 
-        <div class="row justify-content-center">
+
+        <div class="row justify-content-center section-row">
             <div class="col-4">
 
                 <div id="calendar" class="mx-auto"></div>
@@ -97,7 +107,7 @@
             <div class="col-4">
                 <div class="row text-center">
                     <h6 style="background-color:powderblue;"><i>Click around the Calender to find Events for the Festivals above...</i></h6>
-                </div>        
+                </div>
                 <div class="row">
                     <div id="events-list"></div>
 
@@ -107,10 +117,10 @@
 
 
         </div>
-        <div class="row">
+        <div class="row section-row">
 
         </div>
-        <div class="row">
+        <div class="row section-row">
 
         </div>
     </div>
@@ -131,12 +141,10 @@
 
     <style>
 
-        /* #calendar {
-            width: 50%;
-            max-width: 900px;
-            margin: 0 auto;
-            margin-top: 5%;
-        } */
+        .section-row {
+            margin:2%;
+            padding:1%;
+        }
 
         .event-detail {
             margin-bottom: 20px;
@@ -157,6 +165,10 @@
         .highlighted {
             background-color: #ff0;
             border: 2px solid #f00;
+        }
+
+                .culture-btn {
+            height: 40px;
         }
     </style>
 }
