--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -117,9 +117,24 @@
 
 
         </div>
-        <div class="row section-row">
+        <!-- quiz-->
+        <div class="row justify-content-center m-auto section-row bg-warning">
+            <div class="row mb-3">
+                <h1>Quiz</h1>
+            </div>
+            <div class="row">
+                <div class="col"></div>
+                <div class="col-6">
+                    <div class="row mb-lg-5">
+                        @Html.Partial("~/Views/Events/QuizTemplate.cshtml")
 
+
+                    </div>
+                </div>
+                <div class="col"></div>
+            </div>
         </div>
+        <!-- quiz-->
         <div class="row section-row">
 
         </div>
