fix css issues for education

--- a/TP03MainProj/Views/Education/Index.cshtml
+++ b/TP03MainProj/Views/Education/Index.cshtml
@@ -43,19 +43,19 @@
 
                         <div class="row g-4 justify-content-center mt-5">
                             <div class="col-2 bg-img" style="background-image: url('@Url.Content("~/Content/Customer/images/team/Chinese.jpg")');" id="china-img">
-                                <a class="btn-main overlay-btn" href="@Url.Action("DiverseCultures", "Education", new { country = "china" })">China</a>
+                                <a class="btn-main overlay-btn text-black" href="@Url.Action("DiverseCultures", "Education", new { country = "china" })">China</a>
                             </div>
                             <div class="col-2 bg-img" style="background-image: url('@Url.Content("~/Content/Customer/images/team/Japanese.jpg")');" id="japan-img">
-                                <a class="btn-main overlay-btn" href="@Url.Action("DiverseCultures", "Education", new { country = "japan" })">Japan</a>
+                                <a class="btn-main overlay-btn text-black" href="@Url.Action("DiverseCultures", "Education", new { country = "japan" })">Japan</a>
                             </div>
                             <div class="col-2 bg-img" style="background-image: url('@Url.Content("~/Content/Customer/images/team/Korean.jpg")');" id="korea-img">
-                                <a class="btn-main overlay-btn" href="@Url.Action("DiverseCultures", "Education", new { country = "korea" })">Korea</a>
+                                <a class="btn-main overlay-btn text-black" href="@Url.Action("DiverseCultures", "Education", new { country = "korea" })">Korea</a>
                             </div>
                             <div class="col-2 bg-img" style="background-image: url('@Url.Content("~/Content/Customer/images/team/Filipino.jpg")');" id="philippines-img">
-                                <a class="btn-main overlay-btn" href="@Url.Action("DiverseCultures", "Education", new { country = "philippines" })">Philippines</a>
+                                <a class="btn-main overlay-btn text-black" href="@Url.Action("DiverseCultures", "Education", new { country = "philippines" })">Philippines</a>
                             </div>
                             <div class="col-2 bg-img" style="background-image: url('@Url.Content("~/Content/Customer/images/team/Vietnamese.jpg")');" id="vietnam-img">
-                                <a class="btn-main overlay-btn" href="@Url.Action("DiverseCultures", "Education", new { country = "vietnam" })">Vietnam</a>
+                                <a class="btn-main overlay-btn text-black" href="@Url.Action("DiverseCultures", "Education", new { country = "vietnam" })">Vietnam</a>
                             </div>
                         </div>
 
