Added script for loading the quiz for a culture

--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -121,6 +121,7 @@
         var getEventsFromEventbriteUrl = '@Url.Action("GetEventsFromEventbrite", "Events")';
     </script>
     @Scripts.Render("~/bundles/fullcalendar")
+    <script src="~/Scripts/quizLoader.js"></script>
 
     <!-- Modified the width of the calender to see if it fits -->
 
